ui: api stats should group by minute
Fixes #1644

--- a/public/index.html
+++ b/public/index.html
@@ -347,7 +347,8 @@
   <script type="text/javascript" src="./dist/bootstrap-toggle/js/bootstrap-toggle.min.js"></script>
   <script type="text/javascript" src="./dist/bootstrap-slider/js/bootstrap-slider.min.js"></script>
   <script type="text/javascript" src="./dist/bootstrap-menu/js/BootstrapMenu.min.js"></script>
-  <script type="text/javascript" src="./dist/chart.js/js/Chart.min.js"></script>
+  <script src="https://unpkg.com/chart.js@2.7.2/dist/Chart.bundle.js"></script>
+  <script src="https://unpkg.com/vue-chartkick@0.5.0"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment-with-locales.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/8.3.1/markdown-it.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue2-datepicker@2.4.1/lib/index.min.js"></script>
